# djan

./: .env.example  Pipfile  README.md  migrate_old_redirections.sql  pyproject.toml
.github/workflows/: codeql-analysis.yml
djan/: api.py  settings.py  tests.py  urls.py
src/djan/: admin.py  api.py  apps.py  models.py  settings.py  tests.py  unique_counter.py  unique_should_be_counted.lua  urls.py  views.py
src/djan/migrations/: 0001_initial.py  0002_alter_redirection_destination_url.py
src/djan/tests/: settings.py  test_api.py  test_parameters.py  test_unique_counter.py
