[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djan"
dynamic = ["version"]
description = "Un racourcisseur d'URLs super simple"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Salomé Cheysson", email = "salome@cheysson.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["django>=5.0.1", "django-redis>=5.4.0"]

[project.urls]
Documentation = "https://github.com/lafranceinsoumise/djan#readme"
Issues = "https://github.com/lafranceinsoumise/djan/issues"
Source = "https://github.com/lafranceinsoumise/djan"

[tool.hatch.version]
path = "src/djan/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-django",
  "black",
  "python-dotenv",
  "ipython",
  "pytest-redislite",
]
[tool.hatch.envs.default.scripts]
manage = "dotenv run python ./manage.py {args}"
test = "pytest {args:src/djan}"
test-cov = "coverage run -m pytest {args:src/djan}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/djan tests}"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djan.tests.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "tests/*.py"]

[tool.coverage.run]
source_pkgs = ["djan", "tests"]
branch = true
parallel = true
omit = [
  "src/djan/__about__.py",
]

[tool.coverage.paths]
djan = ["src/djan", "*/djan/src/djan"]
tests = ["tests", "*/djan/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
