[tool.poetry]
name = "djan"
version = "0.1.1"
description = "Un racourcisseur d'URLs super simple"
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  "Salomé Cheysson <salome@cheysson.fr>",
  "Maud Royer <bonjour@maudroyer.fr>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
  { include = "djan", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.0.1"
django-redis = ">=5.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
python-dotenv = "*"
ipython = "*"
coverage = { version = ">=6.5", extras = ["toml"] }
pytest = "*"
pytest-django ="*"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
cysystemd = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Documentation = "https://github.com/lafranceinsoumise/djan#readme"
Issues = "https://github.com/lafranceinsoumise/djan/issues"
Source = "https://github.com/lafranceinsoumise/djan"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djan.tests.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "tests/*.py"]

[tool.coverage.run]
source_pkgs = ["djan", "tests"]
branch = true
parallel = true
omit = [
  "src/djan/__about__.py",
]

[tool.coverage.paths]
djan = ["src/djan", "*/djan/src/djan"]
tests = ["tests", "*/djan/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
